Issues: * Change Gloria and Maria's bios * Fix issues on mobile * Add more info to the main page

--- a/source/stylesheets/_mixins.sass
+++ b/source/stylesheets/_mixins.sass
@@ -10,7 +10,12 @@
   font-size: $icon_unit - 10
 
   padding: 13px 10px 7px
-  position: absolute
 
-  & + div, & + p
-    margin-left: $icon_unit + 50px
+  @media only screen and (min-width: 768px)
+    position: absolute
+
+    & + div, & + p
+      margin-left: $icon_unit + 50px
+
+  @media only screen and (max-width: 768px)
+    margin: 0 auto 20px auto
