--- a/source/stylesheets/application/_schedule.sass
+++ b/source/stylesheets/application/_schedule.sass
@@ -18,8 +18,12 @@
     //overflow: scroll
 
   .day_icon
-    position: static
-    float: left
+    @media only screen and (max-width: 767px)
+      display: none
+
+    @media only screen and (min-width: 768px)
+      position: static
+      float: left
 
   .more_info
     float: right
